Agregue un Botoncito

--- a/style/index.html
+++ b/style/index.html
@@ -12,6 +12,7 @@
         <div class="texto">
             <h2>Soy un titulo</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aperiam fuga debitis mollitia sunt enim voluptate modi repudiandae natus! Excepturi vero voluptatum praesentium tempore natus?</p>
+            <button>Botincito</button>
         </div>
     </main>
     
