Agregue un Parrafor

--- a/style/index.html
+++ b/style/index.html
@@ -14,6 +14,7 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum aperiam fuga debitis mollitia sunt enim voluptate modi repudiandae natus! Excepturi vero voluptatum praesentium tempore natus?</p>
             <button>Botincito</button>
         </div>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, non.</p>
     </main>
     
 </body>
