--- a/style/index.html
+++ b/style/index.html
@@ -15,6 +15,7 @@
             <button>Botincito</button>
         </div>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum, non.</p>
+        <p>soy otro parrafo</p>
     </main>
     
 </body>
